; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/avi/extr_avi.c_AVI_GetKeyFlag.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/avi/extr_avi.c_AVI_GetKeyFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVIIF_KEYFRAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @AVI_GetKeyFlag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AVI_GetKeyFlag(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %52 [
    i32 132, label %7
    i32 131, label %24
    i32 130, label %24
    i32 128, label %24
    i32 129, label %35
  ]

7:                                                ; preds = %2
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @GetDWBE(i32* %8)
  %10 = icmp ne i32 %9, 256
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @AVIIF_KEYFRAME, align 4
  store i32 %12, i32* %3, align 4
  br label %54

13:                                               ; preds = %7
  %14 = load i32*, i32** %5, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 4
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 6
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %22

20:                                               ; preds = %13
  %21 = load i32, i32* @AVIIF_KEYFRAME, align 4
  br label %22

22:                                               ; preds = %20, %19
  %23 = phi i32 [ 0, %19 ], [ %21, %20 ]
  store i32 %23, i32* %3, align 4
  br label %54

24:                                               ; preds = %2, %2, %2
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = and i32 %27, 192
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  br label %33

31:                                               ; preds = %24
  %32 = load i32, i32* @AVIIF_KEYFRAME, align 4
  br label %33

33:                                               ; preds = %31, %30
  %34 = phi i32 [ 0, %30 ], [ %32, %31 ]
  store i32 %34, i32* %3, align 4
  br label %54

35:                                               ; preds = %2
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @GetDWBE(i32* %36)
  %38 = icmp ne i32 %37, 438
  br i1 %38, label %39, label %41

39:                                               ; preds = %35
  %40 = load i32, i32* @AVIIF_KEYFRAME, align 4
  store i32 %40, i32* %3, align 4
  br label %54

41:                                               ; preds = %35
  %42 = load i32*, i32** %5, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 4
  %44 = load i32, i32* %43, align 4
  %45 = and i32 %44, 192
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %41
  br label %50

48:                                               ; preds = %41
  %49 = load i32, i32* @AVIIF_KEYFRAME, align 4
  br label %50

50:                                               ; preds = %48, %47
  %51 = phi i32 [ 0, %47 ], [ %49, %48 ]
  store i32 %51, i32* %3, align 4
  br label %54

52:                                               ; preds = %2
  %53 = load i32, i32* @AVIIF_KEYFRAME, align 4
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %52, %50, %39, %33, %22, %11
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i32 @GetDWBE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
